syntax = "proto3";

package logis;

option go_package="github.com/josemqz/SistDistribuidos/Lab1/logis;logis";


message Pedido{
    string id = 1;
    string producto = 2;
    int32 valor = 3;
    string tienda = 4;
    string destino = 5;
    int32 prioritario = 6;
}

message Package{
    string id = 1;
	int32 numSeguimiento = 2;
	string tipo = 3;
	int32 valor = 4;
	int32 numIntentos = 5;
	string estado = 6;
}

message PackageYGeo{
    string id = 1;
	int32 num_seguimiento = 2;
	string tipo = 3;
	int32 valor = 4;
	int32 num_intentos = 5;
	string estado = 6;
    string origen = 7;
    string destino = 8;
}

message regCamion{
    string id_pkg = 1;
	string tipo = 2;
	int32 valor = 3;
	string origen = 4;
	string destino = 5;
	int32 num_intentos = 6;
	string fecha_entrega = 7;
}

message CodSeguimiento{
    int32 codigo = 1;
}

message EstadoPedido{
    string estado = 1;
}

message paquete{
    string id = 1;
    string tipo = 2;
    int32 valor = 3;
    string origen = 4;
    string destino = 5;
    string intentos = 6;
}

message TipoCam{
    string tipo = 1;
    bool numPeticion = 2;
}

message paqRecibido{
    string id = 1;
    string tipo = 2;
    int32 valor = 3;
    int32 intentos = 4;
    string estado = 5;
}


service LogisService{
    //servicios logistica a cliente
    rpc PedidoCliente(Pedido) returns (CodSeguimiento) {}
    rpc SeguimientoCliente(CodSeguimiento) returns (EstadoPedido) {}

    rpc PedidoACamion(TipoCam) returns (PackageYGeo) {}

    //servicios logistica a camion
   // rpc SolPaquetes(tipoCam) returns (paquete){}
   // rpc ResEntrega(paqRecibido) returns (orden_rec){}
   // rpc UpdateEstado(EstadoPedido) returns (orden_rec){}
    
}


